Change log next version
-----------------------
* Fixed an OutOfMemory issue in PowerMockRunner (issue 346).

Change log 1.4.10 (2011-08-23)
------------------------------
* Added missing class, PowerMockTestCase, to testng full release jar (issue 327).
* Fixed test initialization error when using PowerMock Mockito API in Ant (issue 333).
* Upgraded to Javassist 3.15 GA (issue 338).
* Upgraded TestNG module to TestNG 6.2.
* Mockito @InjectMocks annotations on superclasses of test class are no longer ignored (issue 343).
* MockClassloader now defers the loading of classes in "org.pitest.*" to the system classloader. This means that you should be able to use PIT (http://pitest.org) without adding @PowerMockIgnore("org.pitest.*") to each test class (issue 337).
* PowerMockito now works with Mockito 1.9-rc1 but will not include the new artifact by default because it's still rc (issue 339).
* Removed PowerMockRule from full jar in release process (issue 325).

Change log 1.4.9 (2011-05-02)
-----------------------------
* Fixed an issue when mocking system classes containing fields of type Class, Classloader or synthetic fields such as java.util.ServiceLoader.
* TestNG PowerMockObjectFactory now sets the thread context classloader to the PowerMock mock classloader (issue 315).
* TestNG PowerMockObjectFactory now only uses PowerMock classloader and byte-code manipulation if the test class or a method declared in this method is annotated with @PrepareForTest or @SuppressStaticInitializerFor. This introduces a non-backward compatible change so if you're currently using mock injection (e.g. annotating a field with @Mock) you must now also use @PrepareForTest or @SuppressStaticInitializerFor for the mocks to be injected (issue 299).
* Upgraded TestNG module to TestNG 6.0.1 (issue 316).
* Fixed an issue with the PowerMock JUnit runner that prevented a JUnit Rule to throw an exception failing the test (issue 311).